Guide and restore Staging publishing (#19)
Refs #18
